--- a/app/src/main/res/navigation/navigation_graph_tab_home.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_home.xml
@@ -59,6 +59,17 @@
         <action
             android:id="@+id/action_createTimenote_to_previewTimenoteCreated"
             app:destination="@id/previewTimenoteCreated" />
+        <argument
+            android:name="modify"
+            app:argType="boolean" />
+        <argument
+            android:name="id"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="timenoteBody"
+            app:argType="com.timenoteco.timenote.model.TimenoteBody"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/previewTimenoteCreated"
