--- a/app/src/main/res/layout/users_participating.xml
+++ b/app/src/main/res/layout/users_participating.xml
@@ -1,36 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@android:color/white"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.profileFlow.FollowPage">
-
-    <LinearLayout
-        android:id="@+id/followPage_ll"
-        style="@style/AppTheme.Toolbar.LinearLayout">
-
-    <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
-
-        <TextView
-            android:id="@+id/followPage_toolbar"
-            style="@style/AppTheme.Toolbar.Title"
-            android:text="Followers" />
-
-    </androidx.appcompat.widget.Toolbar>
-
-    <TextView style="@style/AppTheme.Divider.Toolbar"/>
-
-    </LinearLayout>
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/users_rv"
+        android:id="@+id/users_participating_rv"
         tools:listitem="@layout/item_user"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/followPage_ll"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
 
