--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:scaleType="centerCrop"
-        android:src="@drawable/beach"
+        android:src="@drawable/audiance"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
