--- a/app/src/main/res/navigation/navigation_graph_tab_search.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_search.xml
@@ -5,15 +5,86 @@
     android:id="@+id/navigation_graph_tab_3"
     app:startDestination="@id/search">
 
+    <navigation
+        android:id="@+id/navigation"
+        app:startDestination="@id/login">
+        <fragment
+            android:id="@+id/login"
+            android:name="com.timenoteco.timenote.view.loginFlow.Login"
+            android:label="fragment_login"
+            tools:layout="@layout/fragment_login">
+            <action
+                android:id="@+id/action_login_to_signup"
+                app:destination="@id/signup" />
+            <argument
+                android:name="x"
+                app:argType="boolean" />
+        </fragment>
+        <fragment
+            android:id="@+id/preferenceSubCategory"
+            android:name="com.timenoteco.timenote.view.loginFlow.PreferenceSubCategory"
+            android:label="fragment_preference_sub_category"
+            tools:layout="@layout/fragment_preference_sub_category">
+            <action
+                android:id="@+id/action_preferenceSubCategory_to_preferenceSuggestion"
+                app:destination="@id/preferenceSuggestion" />
+            <argument
+                android:name="isInLogin"
+                app:argType="boolean" />
+        </fragment>
+        <fragment
+            android:id="@+id/preferenceSuggestion"
+            android:name="com.timenoteco.timenote.view.loginFlow.PreferenceSuggestion"
+            android:label="fragment_preference_suggestion"
+            tools:layout="@layout/fragment_preference_suggestion">
+            <argument
+                android:name="isInLogin"
+                app:argType="boolean" />
+        </fragment>
+        <fragment
+            android:id="@+id/preferenceCategory"
+            android:name="com.timenoteco.timenote.view.loginFlow.PreferenceCategory"
+            android:label="fragment_preference_category"
+            tools:layout="@layout/fragment_preference_category">
+            <action
+                android:id="@+id/action_preferenceCategory_to_preferenceSubCategory"
+                app:destination="@id/preferenceSubCategory" />
+            <argument
+                android:name="isInLogin"
+                app:argType="boolean" />
+        </fragment>
+        <fragment
+            android:id="@+id/signup"
+            android:name="com.timenoteco.timenote.view.loginFlow.Signup"
+            android:label="Signup">
+            <action
+                android:id="@+id/action_signup_to_preferenceCategory"
+                app:destination="@id/preferenceCategory" />
+        </fragment>
+    </navigation>
     <fragment
         android:id="@+id/search"
         android:name="com.timenoteco.timenote.view.searchFlow.Search"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_search_to_searchTop"
+            app:destination="@id/searchTop" />
+        <action
+            android:id="@+id/action_search_to_searchExplore"
+            app:destination="@id/searchExplore" />
+        <action
+            android:id="@+id/action_search_to_navigation"
+            app:destination="@id/navigation" />
+    </fragment>
     <fragment
         android:id="@+id/searchExplore"
         android:name="com.timenoteco.timenote.view.searchFlow.SearchExplore"
-        android:label="SearchExplore" />
+        android:label="SearchExplore" >
+        <action
+            android:id="@+id/action_searchExplore_to_searchExploreClicked"
+            app:destination="@id/searchExploreClicked" />
+    </fragment>
     <fragment
         android:id="@+id/searchExploreClicked"
         android:name="com.timenoteco.timenote.view.searchFlow.SearchExploreClicked"
@@ -21,6 +92,9 @@
     <fragment
         android:id="@+id/searchTop"
         android:name="com.timenoteco.timenote.view.searchFlow.SearchTop"
-        android:label="SearchTop" />
-    <action android:id="@+id/action_global_searchExploreClicked" app:destination="@id/searchExploreClicked" />
+        android:label="SearchTop" >
+        <action
+            android:id="@+id/action_searchTop_to_navigation"
+            app:destination="@id/navigation" />
+    </fragment>
 </navigation>
