--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -108,7 +108,7 @@
                 android:backgroundTint="@color/white"
                 android:textColor="@android:color/white"
                 android:layout_marginHorizontal="12dp"
-                android:hint="Email"
+                android:hint="Username"
                 android:id="@+id/signup_identitfiant"
                 android:textColorHint="#60FFFFFF"
                 android:textSize="14sp"
@@ -218,7 +218,7 @@
         android:layout_marginTop="16dp"
         fancy:fb_textColor="@color/white"
         android:paddingVertical="10dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="72dp"
         android:layout_marginHorizontal="24dp"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
